--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -74,4 +74,9 @@
 		</main>
 
 	</body>
+
+	<script>
+			var titulo = document.querySelector("h1");
+			titulo.textContent = "Aparecida Nutricionista";
+	</script>
 </html>
