--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -12,7 +12,7 @@
 
 		<header>
 			<div class="container">
-				<h1>Aparecida Nutrição</h1>
+				<h1 class="titulo">Aparecida Nutrição</h1>
 			</div>
 		</header>
 		<main>
@@ -76,7 +76,7 @@
 	</body>
 
 	<script>
-			var titulo = document.querySelector("h1");
+			var titulo = document.querySelector(".titulo");
 			titulo.textContent = "Aparecida Nutricionista";
 	</script>
 </html>
