--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -75,8 +75,5 @@
 
 	</body>
 
-	<script>
-			var titulo = document.querySelector(".titulo");
-			titulo.textContent = "Aparecida Nutricionista";
-	</script>
+	<script src="./js/principal.js"></script>
 </html>
