--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -73,6 +73,7 @@
 			</section>
 			<section class="container">
 				<h2 id="titulo-form">Adicionar novo paciente</h2>
+				<ul id="mensagens-erros"></ul>
 				<form id="form-adicionar-paciente"> 
 					<div class="grupo">
 						<label for="nome">Nome:</label>
