--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -101,4 +101,5 @@
 
 	<script src="./js/calcula-imc.js"></script>
 	<script src="./js/form.js"></script>
+	<script src="./js/remover-pacientes.js"></script>
 </html>
