--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -73,6 +73,8 @@
 					</tr>
 				</tbody>
 			</table>
+			<span id="erro-ajax" class="invisivel">Erro ao buscar os pacientes</span>
+			<button id="buscar-pacientes" class="botao bto-principal">Buscar Pacientes</button>
 
 		</section>
 		<section class="container">
@@ -107,5 +109,6 @@
 <script src="./js/form.js"></script>
 <script src="./js/remover-pacientes.js"></script>
 <script src="./js/filtrar.js"></script>
+<script src="./js/buscar-pacientes.js"></script>
 
 </html>
